--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
   "name": "random-topic",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "dependencies": {
-    "chai": "1.9.1",
-    "express": "^4.14.0",
-    "fs": "0.0.1-security",
-    "grunt": "*",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-jshint": "0.9.2",
-    "grunt-istanbul": "~0.2.4",
-    "grunt-istanbul-coverage": "0.0.5",
-    "grunt-jscs-checker": "*",
-    "grunt-mocha-test": "~0.9.0",
-    "pug": "^2.0.0-beta6",
+    "express": "^4.17.1",
+    "jquery-slotmachine": "4.0.1",
+    "pug": "^2.0.4",
     "serve-favicon": "^2.3.0"
   },
   "scripts": {
